main/python/compiler/antlr/CompilerParser.py
# Generated from ./antlr/Compiler.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO


from compiler.objects import *
from compiler.antlr import CompilerLexer
import itertools
import antlr4
from antlr4.error.ErrorListener import ErrorListener

class MyErrorListener(ErrorListener):
    def __init__(self, context):
        super(MyErrorListener, self).__init__()
        self._context = context

    def syntaxError(self, recognizer, offendingSymbol, line, column, msg, e):
        raise ParseError(self._context, line, column, msg)

    def reportAmbiguity(self, recognizer, dfa, startIndex, stopIndex, exact, ambigAlts, configs):
        pass
#        raise Exception("Oh no1!!")

    def reportAttemptingFullContext(self, recognizer, dfa, startIndex, stopIndex, conflictingAlts, configs):
        pass
#        raise ParseError(self._context, 0, 0, str((recognizer, dfa, startIndex, stopIndex, conflictingAlts, configs)))
#        raise Exception("Oh no2!!")

    def reportContextSensitivity(self, recognizer, dfa, startIndex, stopIndex, prediction, configs):
        pass
#        raise Exception("Oh no3!!")



class CompilerParser ( Parser ):

    grammarFileName = "Compiler.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'-'", "'*'", "'/'", "'%'", 
                     "'+'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", 
                     "'!'", "'not'", "'&&'", "'and'", "'||'", "'or'", "'='", 
                     "'>>'", "'print'", "'read'", "'return'", "';'", "'{'", 
                     "'}'", "'while'", "'if'", "'else'", "'void'", "'int'", 
                     "'bool'", "'X'", "')->'", "<INVALID>", "','", "'pass'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BOOL", "COMA", "PASS", "INT", "ID", "COMMENT", "LINE_COMMENT", 
                      "WS" ]

    RULE_expr = 0
    RULE_func_call = 1
    RULE_func_expr_call = 2
    RULE_call_arguments = 3
    RULE_variable_declaration_andassignment = 4
    RULE_assignment = 5
    RULE_write = 6
    RULE_read = 7
    RULE_seq = 8
    RULE_returnW = 9
    RULE_body = 10
    RULE_body_seq = 11
    RULE_declarations = 12
    RULE_scope = 13
    RULE_variable_declaration = 14
    RULE_function_declaration = 15
    RULE_while_expr = 16
    RULE_if_expr = 17
    RULE_function_parameters = 18
    RULE_funcReturnType = 19
    RULE_varType = 20
    RULE_functionalType = 21

    ruleNames =  [ "expr", "func_call", "func_expr_call", "call_arguments", 
                   "variable_declaration_andassignment", "assignment", "write", 
                   "read", "seq", "returnW", "body", "body_seq", "declarations", 
                   "scope", "variable_declaration", "function_declaration", 
                   "while_expr", "if_expr", "function_parameters", "funcReturnType", 
                   "varType", "functionalType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    BOOL=36
    COMA=37
    PASS=38
    INT=39
    ID=40
    COMMENT=41
    LINE_COMMENT=42
    WS=43

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    def setContext(self, context):
        self.context = context

    @staticmethod
    def parse(source, context):
        lexer = CompilerLexer.CompilerLexer(antlr4.InputStream(source))
        lexer._listeners = [ MyErrorListener(context) ]
        stream = antlr4.CommonTokenStream(lexer)
        parser = CompilerParser(stream)
        parser._listeners = [ MyErrorListener(context) ]
        parser.setContext(context)
        return list(itertools.chain(*[i.resolve(context) for i in parser.body().v if i is not None]))


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.v = None
            self.e1 = None # ExprContext
            self.e = None # ExprContext
            self.t = None # Token
            self._INT = None # Token
            self._func_call = None # Func_callContext
            self._ID = None # Token
            self.o = None # Token
            self.e2 = None # ExprContext
            self.a = None # Call_argumentsContext

        def BOOL(self):
            return self.getToken(CompilerParser.BOOL, 0)

        def INT(self):
            return self.getToken(CompilerParser.INT, 0)

        def func_call(self):
            return self.getTypedRuleContext(CompilerParser.Func_callContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompilerParser.ExprContext)
            else:
                return self.getTypedRuleContext(CompilerParser.ExprContext,i)


        def ID(self):
            return self.getToken(CompilerParser.ID, 0)

        def call_arguments(self):
            return self.getTypedRuleContext(CompilerParser.Call_argumentsContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CompilerParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 45
                localctx.t = self.match(CompilerParser.BOOL)
                localctx.v = BoolStatement(self.context, (None if localctx.t is None else localctx.t.text) == 'true', ((0 if localctx.t is None else localctx.t.line), (0 if localctx.t is None else localctx.t.column)))
                pass

            elif la_ == 2:
                self.state = 47
                localctx._INT = self.match(CompilerParser.INT)
                localctx.v = ConstIntStatement(self.context, (0 if localctx._INT is None else int(localctx._INT.text)), ((0 if localctx._INT is None else localctx._INT.line), (0 if localctx._INT is None else localctx._INT.column)))
                pass

            elif la_ == 3:
                self.state = 49
                localctx._func_call = self.func_call()
                localctx.v = localctx._func_call.v.call_from_expression()
                pass

            elif la_ == 4:
                self.state = 52
                self.match(CompilerParser.T__0)
                self.state = 53
                localctx.e = self.expr(0)
                self.state = 54
                self.match(CompilerParser.T__1)
                localctx.v=localctx.e.v
                pass

            elif la_ == 5:
                self.state = 57
                localctx._ID = self.match(CompilerParser.ID)
                localctx.v = GetVariableStatement(self.context, (None if localctx._ID is None else localctx._ID.text), ((0 if localctx._ID is None else localctx._ID.line), (0 if localctx._ID is None else localctx._ID.column)))
                pass

            elif la_ == 6:
                self.state = 59
                localctx.o = self.match(CompilerParser.T__2)
                self.state = 60
                localctx.e = self.expr(9)
                localctx.v = UnaryOperatorStatement(self.context, (None if localctx.o is None else localctx.o.text), localctx.e.v, ((0 if localctx.o is None else localctx.o.line), (0 if localctx.o is None else localctx.o.column)))
                pass

            elif la_ == 7:
                self.state = 63
                localctx.o = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==CompilerParser.T__13 or _la==CompilerParser.T__14):
                    localctx.o = self._errHandler.recoverInline(self)
                else:
                    self.consume()
                self.state = 64
                localctx.e = self.expr(4)
                localctx.v = UnaryOperatorStatement(self.context, (None if localctx.o is None else localctx.o.text), localctx.e.v, ((0 if localctx.o is None else localctx.o.line), (0 if localctx.o is None else localctx.o.column)))
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 103
                    self._errHandler.sync(self);
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = CompilerParser.ExprContext(self, _parentctx, _parentState)
                        localctx.e1 = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 69
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 70
                        localctx.o = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CompilerParser.T__3) | (1 << CompilerParser.T__4) | (1 << CompilerParser.T__5))) != 0)):
                            localctx.o = self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 71
                        localctx.e2 = self.expr(9)
                        localctx.v = OperatorStatement(self.context, localctx.e1.v, (None if localctx.o is None else localctx.o.text), localctx.e2.v, ((0 if localctx.o is None else localctx.o.line), (0 if localctx.o is None else localctx.o.column)))
                        pass

                    elif la_ == 2:
                        localctx = CompilerParser.ExprContext(self, _parentctx, _parentState)
                        localctx.e1 = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 74
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 75
                        localctx.o = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==CompilerParser.T__2 or _la==CompilerParser.T__6):
                            localctx.o = self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 76
                        localctx.e2 = self.expr(8)
                        localctx.v = OperatorStatement(self.context, localctx.e1.v, (None if localctx.o is None else localctx.o.text), localctx.e2.v, ((0 if localctx.o is None else localctx.o.line), (0 if localctx.o is None else localctx.o.column)))
                        pass

                    elif la_ == 3:
                        localctx = CompilerParser.ExprContext(self, _parentctx, _parentState)
                        localctx.e1 = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 79
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 80
                        localctx.o = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CompilerParser.T__7) | (1 << CompilerParser.T__8) | (1 << CompilerParser.T__9) | (1 << CompilerParser.T__10))) != 0)):
                            localctx.o = self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 81
                        localctx.e2 = self.expr(7)
                        localctx.v = OperatorStatement(self.context, localctx.e1.v, (None if localctx.o is None else localctx.o.text), localctx.e2.v, ((0 if localctx.o is None else localctx.o.line), (0 if localctx.o is None else localctx.o.column)))
                        pass

                    elif la_ == 4:
                        localctx = CompilerParser.ExprContext(self, _parentctx, _parentState)
                        localctx.e1 = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 84
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 85
                        localctx.o = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==CompilerParser.T__11 or _la==CompilerParser.T__12):
                            localctx.o = self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 86
                        localctx.e2 = self.expr(6)
                        localctx.v = OperatorStatement(self.context, localctx.e1.v, (None if localctx.o is None else localctx.o.text), localctx.e2.v, ((0 if localctx.o is None else localctx.o.line), (0 if localctx.o is None else localctx.o.column)))
                        pass

                    elif la_ == 5:
                        localctx = CompilerParser.ExprContext(self, _parentctx, _parentState)
                        localctx.e1 = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 89
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 90
                        localctx.o = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==CompilerParser.T__15 or _la==CompilerParser.T__16):
                            localctx.o = self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 91
                        localctx.e2 = self.expr(4)
                        localctx.v = OperatorStatement(self.context, localctx.e1.v, (None if localctx.o is None else localctx.o.text), localctx.e2.v, ((0 if localctx.o is None else localctx.o.line), (0 if localctx.o is None else localctx.o.column)))
                        pass

                    elif la_ == 6:
                        localctx = CompilerParser.ExprContext(self, _parentctx, _parentState)
                        localctx.e1 = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 94
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 95
                        localctx.o = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==CompilerParser.T__17 or _la==CompilerParser.T__18):
                            localctx.o = self._errHandler.recoverInline(self)
                        else:
                            self.consume()
                        self.state = 96
                        localctx.e2 = self.expr(3)
                        localctx.v = OperatorStatement(self.context, localctx.e1.v, (None if localctx.o is None else localctx.o.text), localctx.e2.v, ((0 if localctx.o is None else localctx.o.line), (0 if localctx.o is None else localctx.o.column)))
                        pass

                    elif la_ == 7:
                        localctx = CompilerParser.ExprContext(self, _parentctx, _parentState)
                        localctx.e = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 99
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 100
                        localctx.a = self.call_arguments()
                        localctx.v = FunctionExprCallStatement(self.context, localctx.e.v, localctx.a.v, localctx.e.v._position).call_from_expression()
                        pass

             
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Func_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.v = None
            self.n = None # Token
            self.a = None # Call_argumentsContext

        def ID(self):
            return self.getToken(CompilerParser.ID, 0)

        def call_arguments(self):
            return self.getTypedRuleContext(CompilerParser.Call_argumentsContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_func_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_call" ):
                listener.enterFunc_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_call" ):
                listener.exitFunc_call(self)




    def func_call(self):

        localctx = CompilerParser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            localctx.n = self.match(CompilerParser.ID)
            self.state = 109
            localctx.a = self.call_arguments()
            localctx.v = FunctionCallStatement(self.context, (None if localctx.n is None else localctx.n.text), localctx.a.v, ((0 if localctx.n is None else localctx.n.line), (0 if localctx.n is None else localctx.n.column)))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_expr_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.v = None
            self.e = None # ExprContext
            self.a = None # Call_argumentsContext

        def expr(self):
            return self.getTypedRuleContext(CompilerParser.ExprContext,0)


        def call_arguments(self):
            return self.getTypedRuleContext(CompilerParser.Call_argumentsContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_func_expr_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_expr_call" ):
                listener.enterFunc_expr_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_expr_call" ):
                listener.exitFunc_expr_call(self)




    def func_expr_call(self):

        localctx = CompilerParser.Func_expr_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func_expr_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            localctx.e = self.expr(0)
            self.state = 113
            localctx.a = self.call_arguments()
            localctx.v = FunctionExprCallStatement(self.context, localctx.e.v, localctx.a.v, localctx.e.v._position)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Call_argumentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.v = None
            self.s =  list()
            self._expr = None # ExprContext

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompilerParser.ExprContext)
            else:
                return self.getTypedRuleContext(CompilerParser.ExprContext,i)


        def getRuleIndex(self):
            return CompilerParser.RULE_call_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall_arguments" ):
                listener.enterCall_arguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall_arguments" ):
                listener.exitCall_arguments(self)




    def call_arguments(self):

        localctx = CompilerParser.Call_argumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_call_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(CompilerParser.T__0)
            self.state = 120
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CompilerParser.T__0) | (1 << CompilerParser.T__2) | (1 << CompilerParser.T__13) | (1 << CompilerParser.T__14) | (1 << CompilerParser.BOOL) | (1 << CompilerParser.INT) | (1 << CompilerParser.ID))) != 0):
                self.state = 117
                localctx._expr = self.expr(0)
                localctx.s.append(localctx._expr.v)


            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CompilerParser.COMA:
                self.state = 122
                self.match(CompilerParser.COMA)
                self.state = 123
                localctx._expr = self.expr(0)
                localctx.s.append(localctx._expr.v)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(CompilerParser.T__1)
            localctx.v=localctx.s
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Variable_declaration_andassignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.v = None
            self._varType = None # VarTypeContext
            self.t = None # Token
            self._expr = None # ExprContext

        def varType(self):
            return self.getTypedRuleContext(CompilerParser.VarTypeContext,0)


        def expr(self):
            return self.getTypedRuleContext(CompilerParser.ExprContext,0)


        def ID(self):
            return self.getToken(CompilerParser.ID, 0)

        def getRuleIndex(self):
            return CompilerParser.RULE_variable_declaration_andassignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_declaration_andassignment" ):
                listener.enterVariable_declaration_andassignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_declaration_andassignment" ):
                listener.exitVariable_declaration_andassignment(self)




    def variable_declaration_andassignment(self):

        localctx = CompilerParser.Variable_declaration_andassignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variable_declaration_andassignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            localctx._varType = self.varType()
            self.state = 135
            localctx.t = self.match(CompilerParser.ID)
            self.state = 136
            self.match(CompilerParser.T__19)
            self.state = 137
            localctx._expr = self.expr(0)
            localctx.v = DeclareAndAssignVariableStatement(self.context, localctx._varType.v, (None if localctx.t is None else localctx.t.text), localctx._expr.v, ((0 if localctx.t is None else localctx.t.line), (0 if localctx.t is None else localctx.t.column)))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.v = None
            self._ID = None # Token
            self.t = None # Token
            self._expr = None # ExprContext

        def ID(self):
            return self.getToken(CompilerParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(CompilerParser.ExprContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = CompilerParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            localctx._ID = self.match(CompilerParser.ID)
            self.state = 141
            localctx.t = self.match(CompilerParser.T__19)
            self.state = 142
            localctx._expr = self.expr(0)
            localctx.v = AssignVariableStatement(self.context, (None if localctx._ID is None else localctx._ID.text), localctx._expr.v, ((0 if localctx.t is None else localctx.t.line), (0 if localctx.t is None else localctx.t.column)))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WriteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.v = None
            self._expr = None # ExprContext
            self.t = None # Token

        def expr(self):
            return self.getTypedRuleContext(CompilerParser.ExprContext,0)


        def getRuleIndex(self):
            return CompilerParser.RULE_write

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite" ):
                listener.enterWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite" ):
                listener.exitWrite(self)




    def write(self):
